<resources>
    <string name="app_name">InovCares</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="capture">Capture</string>
    <string name="record">Record</string>
    <string name="back_button">back_button</string>
    <string name="toolbar_bg">Toolbar Bg</string>
    <string name="choose_assessment">Choose Assessment</string>
    <string name="how_to_record">How to record</string>
    <string name="please_choose_assessment_type">Please Choose assessment type</string>
    <string name="add_sign">+</string>
    <string name="metal_health">metal_health</string>
    <string name="arms">arms</string>
    <string name="mental_emotional_and_body_composition">Mental , Emotional and Body Composition</string>
    <string name="mental_and_emotional">Mental and Emotional</string>
    <string name="body_composition">Body Composition</string>
    <string name="social_determinants_of_health_assessment">Social Determinants of Health Assessment</string>
    <string name="social_needs_screening">Social Needs Screening</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_sdoh_assessment">Skip SDOH Assessment</string>
    <string name="skip_mental_and_emotional_assessment">Skip Mental and Emotional Assessment</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="report">Report</string>
    <string name="pre_ecclesial_risk_factor">Pre-ecclesial Risk Factor</string>
    <string name="next">Next</string>
    <string name="please_answer_the_questions_below_on_a_scale_of_1_to_10_1_is_low_and_10_is_high">Please answer the questions below on a scale of 1 to 10. 1 is low and 10 is high.</string>
    <string name="charts">Charts</string>
    <string name="body_fat">Body Fat</string>
    <string name="body_weight">Body Weight</string>
    <string name="corrected_bmi">Corrected BMI</string>
    <string name="please_select_your_weight_by_scrolling_up_or_down_on_the_scale">Please select your weight by scrolling up or down on the scale</string>
    <string name="dot">dot</string>
    <string name="pounds">pounds</string>
    <string name="please_choose_your_activity_level">Please choose your activity level</string>
    <string name="tap_on_data_point_for_more_information">Tap on data point for more information</string>
    <string name="social_needs">Social needs</string>
    <string name="body_ncomposition">Body\nComposition</string>
    <string name="mental_and_nemotional">Mental and\nEmotional</string>
    <string name="social_nneeds">Social\nNeeds</string>
    <string name="access_token">access_token</string>
    <string name="_3_applied_to_me_very_much">3 - Applied to me very much</string>
    <string name="_2_applied_to_me_to_a_considerable_degree">2 - Applied to me to a considerable degree</string>
    <string name="_1_applied_to_me_on_some_degree">1 - Applied to me on some degree</string>
    <string name="_0_do_not_apply_to_me_at_all">0 - Do not apply to me at all</string>
    <string name="the_rating_scale_is_as_follows">The rating scale is as follows:</string>
    <string name="do_not_spend_too_much_time_on_any_statement">Do not spend too much time on any statement.</string>
    <string name="you_ll_be_presented_with_21_statements_please_read_each_statement_and_select_a_number_0_1_2_or_3_which_indicates_how_much_the_statement_applied_to_you_over_the_past_week_there_are_no_right_or_wrong_answers">You’ll be presented with 21 statements. Please read each statement and select a number 0, 1, 2 or 3 which indicates how much the statement applied to you over the past week. There are no right or wrong answers.</string>
    <string name="depression_anxiety_and_stress_scale">Depression, Anxiety and Stress Scale</string>
    <string name="start">Start</string>
    <string name="are_you_pregnant">Are you pregnant?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="self_health_readiness">Self-Health Readiness</string>
    <string name="report_data_send_successfully">Report Data send successfully</string>
    <string name="something_went_wrong_try_again">Something went wrong try again</string>
</resources>