<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".fragments.RiskFactorFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:gravity="center"
            android:text="@string/are_you_pregnant"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/noButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/white"
            android:elevation="32dp"
            android:text="@string/yes"
            android:textColor="@color/blue_700"
            android:textSize="16sp"
            app:cornerRadius="16dp" />

        <Button
            android:id="@+id/yesButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/white"
            android:elevation="32dp"
            android:text="@string/no"
            android:textColor="@color/blue_700"
            android:textSize="16sp"
            app:cornerRadius="16dp" />


    </LinearLayout>

</layout>

