<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.ChartActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bodyFatButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_500"
                android:text="@string/body_fat"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/bodyWeightButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/body_weight"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/correctedBMIButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/corrected_bmi"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_margin="16dp"
            android:padding="16dp" />


    </LinearLayout>

</layout>

