<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".fragments.SocialQuestionFragment">

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/optionInflateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:orientation="horizontal" >

            <androidx.cardview.widget.CardView
                android:id="@+id/zeroCardView"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TextView
                    android:id="@+id/zeroTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_0"
                    android:textColor="@color/blue_700"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/oneCardView"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TextView
                    android:id="@+id/oneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_1"
                    android:textColor="@color/blue_700"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/twoCardView"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TextView
                    android:id="@+id/twoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_2"
                    android:textColor="@color/blue_700"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/threeCardView"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TextView
                    android:id="@+id/threeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_3"
                    android:textColor="@color/blue_700"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>

</layout>
